--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     # env_file:
     # - .env
     volumes:
+      - /etc/letsencrypt/:/etc/letsencrypt/
       - ./app:/app
     expose:
       - '3000'
@@ -17,11 +18,13 @@ services:
     depends_on:
       - frontend
     volumes:
+      - /etc/letsencrypt/:/etc/letsencrypt/
       - ./templates:/etc/nginx/templates
       - ./docker/config/conf.d:/etc/nginx/conf.d/
       # - ./docker/config/log:/var/log/nginx/
       # - ./docker/config/cert:/etc/nginx/cert/
     ports:
-      - 3000:80
+      - 443:443
+      - 80:80
     links:
       - frontend
