--- a/docker/config/conf.d/default.conf
+++ b/docker/config/conf.d/default.conf
@@ -10,6 +10,22 @@ server {
     # root /;
 
 	location / {
+	    return 301 https://$host$request_uri;
+	}
+}
+
+server {
+	listen 443 ssl;
+	server_name _;
+
+    # root /;
+
+	# SSL
+	ssl_certificate /etc/letsencrypt/live/kk-u.ru/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/kk-u.ru/privkey.pem;
+	ssl_trusted_certificate /etc/letsencrypt/live/kk-u.ru/chain.pem;
+
+	location / {
 	    add_header X-Debug test;
   		proxy_pass http://web;
 	}
