--- a/docker/config/conf.d/default.conf
+++ b/docker/config/conf.d/default.conf
@@ -16,7 +16,7 @@ server {
 
 server {
 	listen 443 ssl;
-	server_name _;
+	server_name kk-u.ru;
 
     # root /;
 
@@ -24,6 +24,23 @@ server {
 	ssl_certificate /etc/letsencrypt/live/kk-u.ru/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/kk-u.ru/privkey.pem;
 	ssl_trusted_certificate /etc/letsencrypt/live/kk-u.ru/chain.pem;
+
+	location / {
+	    add_header X-Debug test;
+  		proxy_pass http://web;
+	}
+}
+
+server {
+	listen 443 ssl;
+	server_name kk-a.ru;
+
+    # root /;
+
+	# SSL
+	ssl_certificate /etc/letsencrypt/live/kk-a.ru/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/kk-a.ru/privkey.pem;
+	ssl_trusted_certificate /etc/letsencrypt/live/kk-a.ru/chain.pem;
 
 	location / {
 	    add_header X-Debug test;
