--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "quest",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,6 @@
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.0",
-    "yup": "^0.32.11",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
@@ -35,7 +34,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.16.5",
@@ -57,6 +57,7 @@
     "lint-staged": "^12.3.3",
     "prettier": "2.5.1",
     "sass": "^1.49.7",
+    "serve": "^13.0.2",
     "typescript": "^4.5.5"
   },
   "browserslist": {
