--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,11 @@ services:
     expose:
       - '3000'
     entrypoint:
-      [sh, -c, 'cd /app && yarn install && yarn build && serve -s build']
+      [
+        sh,
+        -c,
+        'cd /app && yarn install && yarn build && npm i serve -g && serve -s build',
+      ]
   nginx:
     image: nginx:alpine
     tty: true
