--- a/docker/config/conf.d/default.conf
+++ b/docker/config/conf.d/default.conf
@@ -12,6 +12,11 @@ server {
 	location / {
 	    return 301 https://$host$request_uri;
 	}
+
+	location /api {
+	    add_header X-Debug test;
+  		proxy_pass http://kk-u.ru:3000;
+	}
 }
 
 server {
@@ -29,6 +34,11 @@ server {
 	    add_header X-Debug test;
   		proxy_pass http://web;
 	}
+
+	location /api {
+	    add_header X-Debug test;
+  		proxy_pass http://kk-u.ru:3000;
+	}
 }
 
 server {
@@ -45,5 +55,10 @@ server {
 	location / {
 	    add_header X-Debug test;
   		proxy_pass http://web;
+	}
+
+	location /api {
+	    add_header X-Debug test;
+  		proxy_pass http://kk-u.ru:3000;
 	}
 }
