--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
+    "victory": "^36.3.2",
     "web-vitals": "^2.1.0",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
